# ShadeYourDesktop

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_macos.yml
assets/: appolloian.glsl  getting_started.glsl  matrix.glsl  minecraft.glsl  voronoi.glsl
include/: Application.h  Application.hpp  Decoder.h  Program.h  QuadGeometry.hpp  Renderer.h  Renderer.hpp  ShaderProgram.hpp  put_window_behind_desktop_icons.h  set_window_behind_desktop_icon.h  string_utils.hpp
src/: Application.cpp  Decoder.cpp  Program.cpp  Renderer.cpp  main.cpp  put_window_behind_desktop_icons_darwin.mm  put_window_behind_desktop_icons_win.cpp  set_window_behind_desktop_icon.mm
